# IBM_DS

./: README.md  extract_tesla_data.py  pyproject.toml  tesla_revenue_extractor.py
Course_2/: DataScienceEcosystem.ipynb
Course_3/: 2-DS0103EN-Exercise-From-Understanding-to-Preparation.ipynb  3-DS0103EN-Exercise-From-Modeling-to-Evaluation.ipynb  DS0103EN-Review-From-Requirements-to-Collection-v1.ipynb
Course_4/: Ex_classes.ipynb  Ex_professores.ipynb  PY0101EN-2-4-Dictionaries-20230526-1685059200.jupyterlite.ipynb  PY0101EN-3-5-Practice_lab-20230526-1685059200.jupyterlite.ipynb
Course_5/: finance_project.ipynb
