[project]
name = "ibm-ds"
version = "0.1.0"
description = "This repo contains my exercises and assingments necessary for the course completion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "graphviz>=0.21",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "yfinance>=0.2.64",
]
